--- a/composer.json
+++ b/composer.json
@@ -2,5 +2,8 @@
     "require": {
         "symfony/http-client": "^5.0",
         "vlucas/phpdotenv": "^4.1"
+    },
+    "require-dev": {
+        "symfony/var-dumper": "^5.0"
     }
 }
