Update dependencies, require PHP 7.4, stop unnecessary updates

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,7 @@ DOMAIN=example.com
 # These are the hostnames you want updated.
 # You can add a single host or a comma separated list.
 HOSTNAMES=@
+
+# Record(s) TTL, we'll use 1800, but DigitalOcean
+# allows a minimum of 30
+TTL=1800
