Minor cleanup, update dependencies

--- a/.env.example
+++ b/.env.example
@@ -12,5 +12,5 @@ DOMAIN=example.com
 HOSTNAMES=@
 
 # Record(s) TTL, we'll use 1800, but DigitalOcean
-# allows a minimum of 30
+# allows a minimum of 30.
 TTL=1800
