--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "require": {
-        "php": ">=7.4",
+        "php": "^8.0",
         "symfony/http-client": "^5.0",
         "vlucas/phpdotenv": "^4.1"
     },
